# aiida-alc-ins

./: README.md  pyproject.toml
examples/calculations/: phonon_modes.json  phonon_modes.json.bak  phonopy_data.yaml  resins-spectrum.json  submit_displacements.py  submit_dos.py  submit_modes.py  submit_resins.py  submit_tosca.py  tosca-resins.py  tosca-spectrum.json
src/aiida_alc_ins/: __init__.py
src/aiida_alc_ins/calculations/: __init__.py  base.py  displacement.py  euphonic.py  phonon_modes.py  resins_spectrum.py  tosca_spectrum.py
src/aiida_alc_ins/cli/: displacement_cli.py  modes.py  resins.py  tosca.py
src/aiida_alc_ins/main/: __init__.py  main.py
src/aiida_alc_ins/parsers/: __init__.py  base_parser.py  displacement_parser.py  euphonic_parser.py  modes_parser.py  resins_parser.py  tosca_parser.py
tests/: test_cli_calculations.py  test_main_cli.py
