[project]
name = "aiida-alc-ins"
version = "0.0.1"
description = "AiiDA plugin for Euphonics, Abins and Resins"
authors = [
    { name = "Adam Jackson" },
    { name = "Jacob Wilkins" },
    { name = "John Purton" },
]
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Natural Language :: English",
    "Development Status :: 5 - Production/Stable",
    "Framework :: AiiDA"
]
readme = "README.md"
keywords = ["aiida", "plugin"]

dependencies = [
    "euphonic",
    "aiida-core==2.7.1",
    "voluptuous<1,>=0.15.2",
    "aiida-workgraph<0.8, >=0.7.6",
    "phonopy>=4.3.1",
]

[project.urls]
repository = "https://github.com/stfc/aiida-alc-ins/"
documentation = "https://stfc.github.io/aiida-alc-ins/"
source = "https://github.com/stfc/aiida-alc-ins"

[project.scripts]
aiida-alc-ins-modes = "aiida_alc_ins.cli.modes:main"
aiida-alc-ins-tosca = "aiida_alc_ins.cli.tosca:main"

[dependency-groups]
dev = [
    "coverage[toml]<8.0.0,>=7.4.1",
    "ipykernel<7.1.0, >=6.30.0",
    "pgtest<2.0.0,>=1.3.2",
    "pytest<9.0,>=8.0",
    "pytest-cov<5.0.0,>=4.1.0",
    "tox-uv<2.0,>=1.25.0",
    "wheel<1.0,>=0.42",
]

docs = [
    "furo<2025.0.0,>=2024.1.29",
    "markupsafe<2.1",
    "numpydoc<2.0.0,>=1.6.0",
    "sphinx<8.0.0,>=7.2.6",
    "sphinxcontrib-contentui<1.0.0,>=0.2.5",
    "sphinxcontrib-details-directive<1.0,>=0.1",
    "sphinx-copybutton<1.0.0,>=0.5.2",
]

pre-commit = [
    "pre-commit<4.0.0,>=3.6.0",
    "ruff<1.0.0,>=0.9.2",
]

[build-system]
requires = ["uv_build>=0.8.4,<0.9.0"]
build-backend = "uv_build"

#[tool.uv.build-backend]
#module-name = "aiida_mlip"
#module-root = ""

[project.entry-points."aiida.calculations"]
"euphonic.dos" = "aiida_alc_ins.calculations.euphonic:DOS"
"euphonic.modes" = "aiida_alc_ins.calculations.phonon_modes:Modes"

[project.entry-points."aiida.parsers"]
"euphonic.euphonic_parser" = "aiida_alc_ins.parsers.euphonic_parser:EuphonicParser"
"euphonic.modes_parser" = "aiida_alc_ins.parsers.modes_parser:ModesParser"


[tool.pytest.ini_options]
# Configuration for [pytest](https://docs.pytest.org)
python_files = "test_*.py example_*.py"
addopts = '--cov-report xml'
filterwarnings = [
    "ignore::DeprecationWarning:aiida:",
    "ignore:Creating AiiDA configuration folder:",
    "ignore::DeprecationWarning:plumpy:",
    "ignore::DeprecationWarning:yaml:",
]
pythonpath = ["."]

[tool.coverage.run]
# Configuration for coverage.py
source=["aiida_alc_ins"]

[tool.numpydoc_validation]
# report on all checks, except the below
checks = [
    "all",
    "EX01",
    "SA01",
    "ES01",
]
# Don't report on objects that match any of these regex
exclude = [
    ".__weakref__$",
    ".__repr__$",
]

[tool.ruff]
extend-exclude = ["conf.py", "*.ipynb"]
target-version = "py310"

[tool.ruff.lint]
# Ignore complexity, non-lowercase
ignore = ["C901", "N806"]
select = [
    # flake8-bugbear
    "B",
    # pylint
    "C", "R",
    # pydocstyle
    "D",
    # pycodestyle
    "E", "W",
    # Pyflakes
    "F",
    # pyupgrade
    "I",
    # pep8-naming
    "N",
    # isort
    "UP",
]

[tool.ruff.lint.isort]
force-sort-within-sections = true
required-imports = ["from __future__ import annotations"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.pylint]
max-args = 10

[tool.ruff.lint.pyupgrade]
keep-runtime-typing = false

[tool.uv]
default-groups = [
    "dev",
    "docs",
    "pre-commit",
]
